# Nyikagotchi

./: .gitignore  README.md  pyproject.toml
src/app/: __init__.py  main.py
src/app/assets/: README.md
src/app/persistence/: __init__.py  storage.py
src/app/sim/: __init__.py  state.py
src/app/ui/: main_window.py
