[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nyikagotchi"
version = "0.1.0"
description = "Offline Tamagotchi-for-adults simulation (scaffold)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = []

[project.scripts]
nyikagotchi = "app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
